ingeress/deployment-httpd.yaml
apiVersion: apps/v1
kind: Deployment
metadata: 
  name: httpd-deployment
  labels:
    app: httpd
spec:
  replicas: 3
  selector: 
    matchLabels:
      app: httpd
  template:
    metadata:
      labels:
        app: httpd
    spec:
      containers:
        - name: httpd
          image: httpd:latest
          ports:
            - containerPort: 80
