ingeress/deployment-webapp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: webapp-deployment
  labels:
    app: webapp
spec:
  replicas: 3
  selector:
    matchLabels:
      app: webapp
  template:
    metadata:
      labels:
        app: webapp
    spec: 
      containers:
        - name: webapp
          image: hisbu/nodejs-web:1
          ports:
            - containerPort: 3000
