ingeress/service-httpd.yml
apiVersion: v1
kind: Service
metadata:
  name: service-http
  labels:
    app: httpd
spec:
  type: NodePort
  selector:
    app: httpd
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30001
