ingeress/service-nginx.yml
apiVersion: v1
kind: Service
metadata:
  name: service-nginx
  labels:
    app: nginx
spec:
  type: NodePort
  selector:
    app: nginx
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30002
