ingeress/service-webapp.yml
apiVersion: v1
kind: Service
metadata:
  name: service-webapp
  labels:
    app: webapp
spec:
  type: NodePort
  selector:
    app: webapp
  ports:
    - port: 80
      targetPort: 3000
      nodePort: 30003
