ingeress/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-webapp
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    kubernetes.io/ingress.class: nginx
spec:
  rules:
    - host: purwadhika.test
      http:
          paths:
            - path: /httpd
              backend:
                serviceName: service-http
                servicePort: 80
            - path: /nginx
              backend:
                serviceName: service-nginx
                servicePort: 80
    - host: webapp.purwadhika.test
      http:
          paths:
            - path: /
              backend:
                serviceName: service-webapp
                servicePort: 80
            - path: /app2
              backend:
                serviceName: service-webapp2
                servicePort: 80
